--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -190,6 +190,8 @@
           href: how-to-delete-project.md
         - name: 旧バージョンの Azure Migrate を使用する
           href: migrate-v1.md
+        - name: Azure Lighthouse を使用して移行プロジェクトを管理する
+          href: ../lighthouse/how-to/migration-at-scale.md?toc=/azure/migrate/toc.json&bc=/azure/migrate/breadcrumb/toc.json
 - name: トラブルシューティング
   items:
     - name: 全般
