--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -143,6 +143,8 @@
           href: batch-sig-images.md
         - name: マネージド イメージ リソースを使用してプールを作成する
           href: batch-custom-images.md
+        - name: Availability Zones 間でプールを作成する
+          href: create-pool-availability-zones.md
         - name: ディスク暗号化が有効になっているプールを作成する
           href: disk-encryption.md
         - name: 仮想ネットワーク内にプールを作成する
