--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -4,8 +4,6 @@
   items:
     - name: Azure Digital Twins について
       href: overview.md
-    - name: 以前のリリースとの違い
-      href: overview-differences.md
 - name: クイックスタート
   expanded: true
   items:
@@ -53,6 +51,8 @@
               href: how-to-set-up-instance-powershell.md
             - name: スクリプト化バージョン
               href: how-to-set-up-instance-scripted.md
+        - name: Private Link でプライベート アクセスを有効にする
+          href: how-to-enable-private-link.md
         - name: アプリ認証コードを作成する
           href: how-to-authenticate-client.md
         - name: アプリの登録を作成する
@@ -107,6 +107,8 @@
               href: how-to-manage-routes-apis-cli.md
             - name: ポータルのバージョン
               href: how-to-manage-routes-portal.md
+        - name: ルーティング イベントのマネージド ID を有効にする
+          href: how-to-enable-managed-identities.md
         - name: Azure Maps と統合する
           href: how-to-integrate-maps.md
         - name: Azure Time Series Insights と統合する
@@ -153,6 +155,20 @@
       href: /cli/azure/ext/azure-iot/dt?view=azure-cli-latest&preserve-view=true
 - name: リソース
   items:
+    - name: Digital Twins サービスに関する制約
+      href: reference-service-limits.md
+    - name: 価格と可用性
+      items:
+        - name: 価格
+          href: 'https://azure.microsoft.com/pricing/details/digital-twins'
+        - name: SLA
+          href: 'https://azure.microsoft.com/support/legal/sla/digital-twins'
+        - name: リージョンと可用性
+          href: 'https://azure.microsoft.com/global-infrastructure/services/?products=digital-twins'
+    - name: 顧客データ要求
+      href: resources-customer-data-requests.md
+    - name: 元のリリースとの違い
+      href: resources-compare-original-release.md
     - name: API と SDK
       items:
         - name: コントロール プレーン
@@ -243,22 +259,10 @@
           href: /samples/azure-samples/dtdl-validator/dtdl-validator/
         - name: DTMI の仕様
           href: 'https://github.com/Azure/digital-twin-model-identifier'
-    - name: 顧客データ要求
-      href: resources-customer-data-requests.md
-    - name: Digital Twins サービスに関する制約
-      href: reference-service-limits.md
-    - name: 価格と可用性
-      items:
-        - name: 価格
-          href: 'https://azure.microsoft.com/pricing/details/digital-twins'
-        - name: SLA
-          href: 'https://azure.microsoft.com/support/legal/sla/digital-twins'
-        - name: リージョンと可用性
-          href: 'https://azure.microsoft.com/global-infrastructure/services/?products=digital-twins'
-    - name: 顧客事例
-      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
     - name: Channel 9 の動画
       href: 'https://channel9.msdn.com/Search?term=%22Azure%20Digital%20Twins%22'
+    - name: 顧客事例
+      href: 'https://customers.microsoft.com/en-us/search?sq=%22Azure%20Digital%20Twins%22&ff=&p=0&so=story_publish_date%20desc'
     - name: Azure ツール
       items:
         - name: Azure Cloud Shell
@@ -267,7 +271,5 @@
           href: /powershell/azure/
         - name: Azure portal
           href: 'https://portal.azure.com'
-    - name: Azure RBAC のドキュメント
-      href: ../role-based-access-control/overview.md
     - name: サポート オプションとヘルプ オプション
       href: ../iot-fundamentals/iot-support-help.md
