--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -42,6 +42,8 @@
       href: ../container-registry/container-registry-event-grid-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: Azure Communication Services のイベントを処理する
       href: ../communication-services/quickstarts/telephony-sms/handle-sms-events.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Azure Cache for Redis のイベント
+      href: ../azure-cache-for-redis/cache-event-grid-quickstart-portal.md?toc=%2fazure%2fevent-grid%2ftoc.json
 - name: チュートリアル
   items:
     - name: VM が変更されたときに電子メールで通知する
@@ -138,6 +140,8 @@
               href: event-schema-azure-signalr.md
             - name: Azure サブスクリプション
               href: event-schema-subscriptions.md
+            - name: Azure Cache for Redis
+              href: event-schema-azure-cache.md
     - name: パートナー イベント
       items:
         - name: パートナー イベントの概要
@@ -188,6 +192,8 @@
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
+        - name: Azure Policy によるセキュリティ制御
+          href: ./security-controls-policy.md
         - name: イベンド ハンドラーへのイベント配信の認証
           href: security-authentication.md
         - name: 発行クライアントの認証
