--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -45,6 +45,14 @@
       items:
         - name: Spring Boot Initializer の使用
           href: /azure/developer/java/spring-framework/configure-spring-boot-initializer-java-app-with-redis-cache
+    - name: Azure Event Grid
+      items:
+        - name: Azure portal でイベントをルーティングする
+          href: cache-event-grid-quickstart-portal.md
+        - name: Azure CLI でイベントをルーティングする
+          href: cache-event-grid-quickstart-cli.md
+        - name: PowerShell でイベントをルーティングする
+          href: cache-event-grid-quickstart-powershell.md
     - name: ランキングの作成
       href: cache-web-app-cache-aside-leaderboard.md
     - name: 機械学習モデルのデプロイ
@@ -128,6 +136,8 @@
           href: cache-administration.md#schedule-updates
         - name: redis-cli.exe アクセスの構成
           href: cache-how-to-redis-cli-tool.md
+        - name: Azure Cache for Redis イベントの発行
+          href: cache-event-grid.md
         - name: TLS 1.0 および 1.1 の削除
           href: cache-remove-tls-10-11.md
         - name: 管理に関する FAQ
