--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -96,6 +96,8 @@
           href: ./cicd/continuous-integration-deployment.md
         - name: セキュリティ
           items:
+            - name: Azure Policy によるセキュリティ制御
+              href: ./security-controls-policy.md
             - name: 暗号化
               href: ./security/workspaces-encryption.md
             - name: ネットワークのセキュリティ
