--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -359,6 +359,8 @@
           href: newsignature-tutorial.md
         - name: CloudCords
           href: cloudcords-tutorial.md
+        - name: CloudKnox アクセス許可管理プラットフォーム
+          href: cloudknox-permissions-management-platform-tutorial.md
         - name: Cloudmore
           href: cloudmore-tutorial.md
         - name: CloudPassage
@@ -1225,6 +1227,8 @@
           href: officespace-tutorial.md
         - name: Oktopost SAML
           href: oktopost-saml-tutorial.md
+        - name: Olfeo SAAS
+          href: olfeo-saas-tutorial.md
         - name: ON24 Virtual Environment SAML Connection
           href: on24-tutorial.md
         - name: OneDesk
@@ -1301,6 +1305,8 @@
           href: pegasystems-tutorial.md
         - name: Pendo
           href: pendo-tutorial.md
+        - name: Penji
+          href: penji-tutorial.md
         - name: ユーザー
           href: people-tutorial.md
         - name: Peoplecart
@@ -1507,6 +1513,8 @@
           href: samlssojira-tutorial.md
         - name: Azure AD SAML Toolkit
           href: saml-toolkit-tutorial.md
+        - name: Samsung Knox およびビジネスサービス
+          href: samsung-knox-and-business-services-tutorial.md
         - name: Sansan
           href: sansan-tutorial.md
         - name: SAP Business ByDesign
@@ -1593,6 +1601,8 @@
           href: shucchonavi-tutorial.md
         - name: Shutterstock
           href: shutterstock-tutorial.md
+        - name: Sigma Computing
+          href: sigma-computing-tutorial.md
         - name: Signagelive
           href: signagelive-tutorial.md
         - name: SignalFx
@@ -2026,6 +2036,8 @@
           href: amazon-web-service-tutorial.md#configure-azure-ad-sso
         - name: Asana
           href: asana-provisioning-tutorial.md
+        - name: Atea
+          href: atea-provisioning-tutorial.md
         - name: Atlassian Cloud
           href: atlassian-cloud-provisioning-tutorial.md
         - name: Azure Databricks SCIM Connector
@@ -2176,12 +2188,14 @@
           href: pingboard-provisioning-tutorial.md
         - name: Playvox
           href: playvox-provisioning-tutorial.md
-        - name: Promapp
-          href: promapp-provisioning-tutorial.md
+        - name: Preciate
+          href: preciate-provisioning-tutorial.md
         - name: PrinterLogic SaaS
           href: printer-logic-saas-provisioning-tutorial.md
         - name: Priority Matrix
           href: priority-matrix-provisioning-tutorial.md
+        - name: Promapp
+          href: promapp-provisioning-tutorial.md
         - name: Proxyclick
           href: Proxyclick-provisioning-tutorial.md
         - name: Peakon
