commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -266,9 +266,6 @@
             - name: ポリシー検証
               href: troubleshoot-custom-policies.md
               displayName: troubleshooting
-        - name: Usage analytics
-          href: analytics-with-application-insights.md
-          displayName: 'application insights, app insights'
         - name: リファレンス
           items:
             - name: TrustFrameworkPolicy
@@ -321,8 +318,6 @@
                   items:
                     - name: 検証技術プロファイルとは
                       href: validation-technical-profile.md
-                    - name: Application Insights
-                      href: application-insights-technical-profile.md
                     - name: Azure Active Directory
                       href: active-directory-technical-profile.md
                     - name: Azure AD の Multi-Factor Authentication
@@ -422,9 +417,6 @@
           displayName: 'migrate, b2clogin, owin'
     - name: オートメーション
       items:
-        - name: Azure Monitor
-          href: azure-monitor.md
-          displayName: 'log, logs, logging, usage, events'
         - name: Microsoft Graph API
           href: microsoft-graph-operations.md
           displayName: 'account, accounts, msgraph, ms graph, graph'
@@ -434,14 +426,23 @@
         - name: PowerShell を使用したポリシーの管理
           href: manage-custom-policies-powershell.md
           displayName: 'scripting, scripts, psh, custom policy'
-    - name: 監査ログ
-      href: view-audit-logs.md
     - name: ユーザーの管理 - Azure portal
       href: manage-users-portal.md
       displayName: 'create users, add users, delete users'
     - name: API Management API のセキュリティ保護
       href: secure-api-management.md
       displayName: 'apim, api management, migrate, b2clogin.com'
+    - name: ログと監視
+      items:
+        - name: 監査ログ
+          href: view-audit-logs.md
+          displayName: 'log, logs, logging, usage, events'
+        - name: Azure Monitor
+          href: azure-monitor.md
+          displayName: 'log, logs, logging, usage, events'
+        - name: Usage analytics
+          href: analytics-with-application-insights.md
+          displayName: 'application insights, app insights'
     - name: コンプライアンス
       items:
         - name: ユーザー アクセス
