--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -483,8 +483,10 @@
           href: ../common/storage-account-move.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 監視 (クラシック)
           items:
-            - name: Azure portal での監視 (クラシック)
-              href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: メトリックの有効化と管理 (クラシック)
+              href: ../common/manage-storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: ログの有効化と管理 (クラシック)
+              href: ../common/manage-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: トラブルシューティング
           items:
             - name: 待機時間に関する問題
@@ -853,7 +855,7 @@
               href: ../common/storage-explorer-blob-versioning.md
             - name: Storage Explorer のサポート ポリシーとライフサイクル
               href: ../common/storage-explorer-support-policy-lifecycle.md
-            - name: Storage Explorer のアクセシビリティ
+            - name: ストレージ エクスプローラーのアクセシビリティ
               href: ../../vs-azure-tools-storage-explorer-accessibility.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Microsoft Q&A 質問ページ
           href: /answers/topics/azure-blob-storage.html
