--- a/articles/governance/blueprints/toc.yml
+++ b/articles/governance/blueprints/toc.yml
@@ -126,16 +126,8 @@
           displayName: 'standards, irs, 1075'
           href: ./samples/irs-1075/deploy.md
     - name: ISO 27001
-      items:
-        - name: 概要
-          displayName: 'standards, iso, 27001'
-          href: ./samples/iso27001/index.md
-        - name: コントロール マッピング
-          displayName: 'standards, iso, 27001'
-          href: ./samples/iso27001/control-mapping.md
-        - name: デプロイ手順
-          displayName: 'standards, iso, 27001'
-          href: ./samples/iso27001/deploy.md
+      displayName: 'standards, iso, 27001, 2013'
+      href: ./samples/iso-27001-2013.md
     - name: ISO 27001 - 共有サービス
       items:
         - name: 概要
