commit translated contents

--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -1472,30 +1472,11 @@
     - name: カスタム データ
       href: custom-data.md
     - name: Ansible
-      items:
-        - name: インストールと構成
-          href: /azure/developer/ansible/install-on-linux-vm
-        - name: Linux VM の作成
-          href: /azure/developer/ansible/vm-configure
-        - name: Linux VM の管理
-          href: /azure/developer/ansible/vm-manage
+      href: 'https://docs.microsoft.com/azure/developer/ansible/'
     - name: Terraform
-      items:
-        - name: インストールと構成
-          href: /azure/developer/terraform/install-configure
-        - name: 完全な VM の作成
-          href: /azure/developer/terraform/create-linux-virtual-machine-with-infrastructure
+      href: 'https://docs.microsoft.com/azure/developer/terraform/'
     - name: Jenkins
-      href: /azure/developer/jenkins/overview
-      items:
-        - name: Jenkins サーバーを作成する
-          href: /azure/developer/jenkins/configure-on-linux-vm
-        - name: Azure VM エージェントでスケーリングする
-          href: /azure/developer/jenkins/scale-deployments-using-vm-agents
-        - name: アーティファクトをストレージに発行する
-          href: /azure/developer/jenkins/azure-storage-blobs-as-build-artifact-repository
-        - name: Jenkins をセキュリティ保護する
-          href: 'https://jenkins.io/blog/2017/04/20/secure-jenkins-on-azure/'
+      href: 'https://docs.microsoft.com/en-us/azure/developer/jenkins/'
     - name: Azure DevOps
       href: ./linux/tutorial-azure-devops-blue-green-strategy.md
 - name: トラブルシューティング
