--- a/articles/cognitive-services/Speech-Service/breadcrumb/toc.yml
+++ b/articles/cognitive-services/Speech-Service/breadcrumb/toc.yml
@@ -9,3 +9,14 @@
         - name: Speech サービス
           tocHref: /azure/cognitive-services/
           topicHref: /azure/cognitive-services/speech-service/index
+- name: Azure
+  tocHref: /legal/
+  topicHref: /azure/index
+  items:
+    - name: Cognitive Services
+      tocHref: /legal/cognitive-services/speech-service
+      topicHref: /azure/cognitive-services/index
+      items:
+        - name: Speech Service
+          tocHref: /legal/cognitive-services/speech-service
+          topicHref: /azure/cognitive-services/speech-service/index
